# matricule-checker

./: .gitignore  Makefile  README.md  matricule_checker.py  pyproject.toml
matricule_checker/: check.py
