[tool.poetry]
name = "matricule-checker"
version = "0.1.0"
description = ""
authors = ["Etienne Lévêque <eti.lvque@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"pdfminer.six" = "^20191110"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pyinstaller = "^3.5"
macholib = "^1.13"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
